--- a/theme/night-cus.css
+++ b/theme/night-cus.css
@@ -1,7 +1,7 @@
 @import "night-cus/mermaid.dark.css";
 @import "night-cus/codeblock.dark.css";
 @import "night-cus/sourcemode.dark.css";
-
+@import "common/common.css";
 :root {
     --bg-color:  #363B40;
     --side-bar-bg-color: #2E3033;
@@ -1003,53 +1003,4 @@ footer.ty-footer {
 .export-item.active,
 .export-items-list-control {
     background: #d6d6d4
-}
-
-
-/* 自定义 css */
-
-/* 始终显示 h* 的标题序号，方便使用 ctrl + 数字 快捷键*/
-h1::before,
-h2::before,
-h3::before,
-h4::before,
-h5::before,
-h6::before {
-    color: #42adf5;
-    left: -1.5625rem;
-    top: .285714286rem;
-    border: 1px solid;
-    border-radius: 3px;
-    position: absolute;
-    float: left;
-    font-size: 9px;
-    padding-left: 2px;
-    padding-right: 2px;
-    vertical-align: bottom;
-    font-weight: 400;
-    line-height: normal;
-}
-
-h1::before {
-    content: 'h1';
-}
-
-h2::before {
-    content: 'h2';
-}
-
-h3::before {
-    content: 'h3';
-}
-
-h4::before {
-    content: 'h4';
-}
-
-h5::before {
-    content: 'h5';
-}
-
-h6::before {
-    content: 'h6';
 }
